# motivate.ai

./: .gitignore  Checking  DESIGN_RULES.md  README.md  Running  TESTING.md  TESTING_STYLE_GUIDE.md  TODO.md  dev_start.bat  initial_idea.md  pytest.ini  run_tests.bat  run_tests_simple.bat  setup.bat  start_backend.bat  start_complete.bat  start_desktop.bat  test_request.json  test_system.bat
.cursor/rules/: checkdocs.mdc
.github/workflows/: ci.yml
backend/: AI_AGENT_DEBUGGING_GUIDE.md  Installing  README.md  database.py  main.py  pytest.ini  requirements.txt  seed_data.py  seed_test_data.bat
backend/api/: __init__.py  activity.py  ai_agent_api.py  projects.py  suggestions.py  tasks.py
backend/models/: __init__.py  activity.py  project.py  task.py
backend/services/: ai_agent.py  ai_agent_simple.py  ai_service.py  ai_tools.py
backend/tests/: __init__.py  conftest.py  test_ai_agent_integration.py  test_ai_service.py  test_ai_task_integration.py  test_database_simple.py  test_endpoints_simple.py  test_integration.py  test_integration_simple.py  test_live_api.py  test_main.py  test_projects_api.py  test_simple.py
desktop/: DESIGN_GUIDE.md  README.md  Running  SETTINGS_GUIDE.md  create_shortcut.py  demo_ai_features.py  launch_app.py  main.py  requirements.txt  start_desktop.bat  test_settings.py  test_tray.py  test_visible_tray.py
desktop/models/: __init__.py
desktop/services/: __init__.py  idle_monitor.py  tray_manager.py  tray_manager_fixed.py
desktop/tests/: __init__.py  test_main.py
desktop/ui/: __init__.py  ai_button_tooltip.py  ai_split_dialog.py  main_window.py  new_project.py  popup_manager.py  quick_add.py  settings_dialog.py  theme_manager.py
desktop/ui/components/: __init__.py
docs/: AI_FEATURES_GUIDE.md  API_REFERENCE.md  DATABASE_SCHEMA.md  DEVELOPER_TASKS_GUIDE.md  GETTING_STARTED.md  PROJECT_STRUCTURE.md  TROUBLESHOOTING_GUIDE.md
mobile/: README.md  pyproject.toml  requirements.txt
mobile/src/motivate_ai/: __init__.py  __main__.py  app.py
mobile/src/motivate_ai/models/: __init__.py  simple_models.py
mobile/src/motivate_ai/services/: __init__.py  api_client.py  storage.py
mobile/src/motivate_ai/ui/: __init__.py
mobile/src/motivate_ai/utils/: __init__.py  helpers.py
shared/: config.env.example
